test/features/errors/ffi/e4005_type_not_ffi_safe.spl
# E4005: Type Not FFI-Safe

Feature: E4005 - Type Not FFI-Safe
  As a Simple compiler
  I want to detect non-FFI-safe types in FFI function signatures
  So that foreign functions have compatible types

  Background:
    Given I have the Simple compiler
    And the compiler supports FFI

  Scenario: String type in FFI signature
    When I compile:
      '''
      extern fn process_string(s: str) -> i32  # Error: str not FFI-safe
      '''
    Then I should see error E4005 at line 1
    And the error message should be "type `{type}` is not FFI-safe"
    And the label should indicate "not FFI-safe"
    And the help should suggest "use only FFI-compatible types (integers, floats, pointers) in FFI signatures"

  Scenario: Array type in FFI signature
    When I compile:
      '''
      extern fn process_array(arr: [i32]) -> i32  # Error: array not FFI-safe
      '''
    Then I should see error E4005
    And the error should point to the array type

  Scenario: Option type in FFI signature
    When I compile:
      '''
      extern fn maybe_process(opt: Option<i32>) -> i32  # Error: Option not FFI-safe
      '''
    Then I should see error E4005

  Scenario: Custom struct in FFI without repr(C)
    When I compile:
      '''
      struct MyStruct:
        x: i32
        y: i32

      extern fn process_struct(s: MyStruct) -> i32  # Error: no repr(C)
      '''
    Then I should see error E4005

  Scenario: Valid FFI with integer types
    When I compile:
      '''
      extern fn add(a: i32, b: i32) -> i32
      '''
    Then compilation should succeed

  Scenario: Valid FFI with float types
    When I compile:
      '''
      extern fn compute(x: f64, y: f64) -> f64
      '''
    Then compilation should succeed

  Scenario: Valid FFI with pointer types
    When I compile:
      '''
      extern fn process_buffer(ptr: *mut u8, len: usize) -> i32
      '''
    Then compilation should succeed

  Scenario: Valid FFI with repr(C) struct
    When I compile:
      '''
      #[repr(C)]
      struct Point:
        x: i32
        y: i32

      extern fn process_point(p: Point) -> i32
      '''
    Then compilation should succeed

  Scenario: Valid FFI with void return
    When I compile:
      '''
      extern fn log_message(code: i32)
      '''
    Then compilation should succeed

  Scenario: String can be passed as pointer
    When I compile:
      '''
      extern fn process_c_string(s: *const u8) -> i32
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      extern fn process(s: str) -> i32
      '''
    Then I should see error E4005
    And the error message should contain "FFI-안전하지 않은 타입"
